[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/ui/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/ui/OptionsMenu.gd" type="Script" id=2]

[node name="OptionsMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.152941, 0.152941, 0.266667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 75.0
margin_top = 48.0
margin_right = 244.0
margin_bottom = 132.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 169.0
margin_bottom = 18.0
text = "Options"
align = 1

[node name="MasterVolumeContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 169.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/MasterVolumeContainer"]
margin_right = 115.0
margin_bottom = 18.0
rect_min_size = Vector2( 115, 0 )
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="CenterContainer/VBoxContainer/MasterVolumeContainer"]
margin_left = 119.0
margin_right = 169.0
margin_bottom = 16.0
rect_min_size = Vector2( 50, 0 )
min_value = -20.0
max_value = 0.0

[node name="MusicVolumeContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 169.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/MusicVolumeContainer"]
margin_right = 115.0
margin_bottom = 18.0
rect_min_size = Vector2( 115, 0 )
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="CenterContainer/VBoxContainer/MusicVolumeContainer"]
margin_left = 119.0
margin_right = 169.0
margin_bottom = 16.0
rect_min_size = Vector2( 50, 0 )
min_value = -20.0
max_value = 0.0

[node name="SoundEffectsVolumeContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 169.0
margin_bottom = 84.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/SoundEffectsVolumeContainer"]
margin_right = 115.0
margin_bottom = 18.0
rect_min_size = Vector2( 115, 0 )
text = "Effects Volume"

[node name="EffectsVolumeSlider" type="HSlider" parent="CenterContainer/VBoxContainer/SoundEffectsVolumeContainer"]
margin_left = 119.0
margin_right = 169.0
margin_bottom = 16.0
rect_min_size = Vector2( 50, 0 )
min_value = -20.0
max_value = 0.0

[node name="BackButton" type="Button" parent="."]
margin_right = 55.0
margin_bottom = 10.0
rect_min_size = Vector2( 55, 0 )
text = "< Back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="CenterContainer/VBoxContainer/MasterVolumeContainer/MasterVolumeSlider" to="." method="_on_MasterVolumeSlider_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/MusicVolumeContainer/MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/SoundEffectsVolumeContainer/EffectsVolumeSlider" to="." method="_on_EffectsVolumeSlider_value_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
